--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@web-scrobbler/metadata-filter": "3.1.0",
     "blueimp-md5": "2.19.0",
+    "fs": "^0.0.1-security",
     "stylelint": "15.11.0",
     "vite": "5.2.4",
     "webextension-polyfill": "0.10.0"
